# flowmm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  create_env_file.sh  environment.yml  pyproject.toml  run_energy_guidance.sh
data/mp20_llama/: train.csv  val.csv
scripts_analysis/: dft_create_inputs.py  ehull.py  ehull_correction.py  novelty.py  prerelax.py
scripts_model/: evaluate.py  evaluate_docking.py  run.py  run_docking.py
scripts_model/conf/: default.yaml
scripts_model/conf/data/: carbon.yaml  dock_and_optimize.yaml  dock_then_optimize.yaml  docking.yaml  mp20_llama.yaml  mp_20.yaml  mpts_52.yaml  perov.yaml
scripts_model/conf/hydra/: organized.yaml  organized_hps.yaml  trash.yaml
scripts_model/conf/model/: abits_nonsym.yaml  abits_params.yaml  abits_params_normal_base.yaml  docking_only_coords.yaml  null_nonsym.yaml  null_params.yaml  null_params_for_testing.yaml  null_params_normal_base.yaml  simplex_nonsym.yaml  simplex_params.yaml  simplex_params_normal_base.yaml
scripts_model/conf/vectorfield/: cspnet.yaml  dock_and_optimize_cspnet.yaml  dock_cspnet.yaml  dock_then_optimize_cspnet.yaml  rfm_cspnet.yaml
src/flowmm/: __init__.py  cfg_utils.py  chgnet_.py  geometric_.py  joblib_.py  pandas_.py  pymatgen_.py  tabular.py
src/flowmm/rfm/: vmap.py  (+1 more)
src/rfm_docking/: architectures.py  collate.py  datamodule.py  dataset.py  docking_arch.py  docking_datamodule.py  docking_dataset.py  docking_manifold_getter.py  docking_model_pl.py  featurization.py  model_pl.py  reassignment.py  sampling.py  utils.py  visualization.py
(+76 files in other folders)
